# embrapa-api

./: .coverage  .env  .flake8  .gitattributes  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  dockerfile  env_example.txt  manage.py  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 4b13a390712f_create_users_table.py  ecefef0a7f3c_create_data_tables.py
app/: main.py
app/api/: auth_routes.py  commercialization_routes.py  exportation_routes.py  importation_routes.py  processing_routes.py  production_routes.py  protected_routes.py
app/auth/: dependencies.py  schemas.py  security.py
app/core/: auth.py  config.py  database.py
app/logging/: __init__.py  logger.py
app/models/: commercialization.py  exportation.py  exportation_types.py  importation.py  importation_types.py  models.py  processing.py  processing_types.py  production.py  user.py
app/repositories/: db_fallback.py  fallback.py  user_repository.py
app/routes/: auth.py  commercialization.py  exportation.py  importation.py  populate_db.py  predict.py  processing.py  production.py  protected.py
app/schemas/: prediction.py  schema.py  user.py
app/scraping/: commercialization.py  exportation.py  helpers.py  importation.py  processing.py  production.py
data/: commercialization.csv  exportation.csv  importation.csv  processing.csv  production.csv
logs/: app.log.3
notebooks/: exploratory_analysis.ipynb  model_production_prediction.pkl
scripts/: download_commercialization_data.py  download_exportation_data.py  download_importation_data.py  download_processing_data.py  download_production_data.py
tests/: conftest.py  test_auth.py  test_auth_routes.py  test_commercialization_fallback.py  test_commercialization_protection.py  test_commercialization_route.py  test_commercialization_scraper.py  test_commercialization_service.py  test_exportation_fallback.py  test_exportation_protection.py  test_exportation_route.py  test_exportation_scraper.py  test_exportation_service.py  test_fallback.py  test_helpers.py  test_helpers_service.py  test_importation_fallback.py  test_importation_protection.py  test_importation_route.py  test_importation_scraper.py  test_importation_service.py  test_logger.py  test_main.py  test_predict.py  test_processing_fallback.py  test_processing_protection.py  test_processing_route.py  test_processing_scraper.py  test_processing_service.py  test_production_protection.py  test_production_route.py  test_production_scraper.py  test_production_service.py  test_protected_route.py
(+27 files in other folders)
