[project]
name = "embrapa-api"
version = "0.1.0"
description = "REST API for viticulture data from Embrapa, with scraping and fallback support."
authors = [
    {name = "Camila Coelho",email = "piva.camila@hotmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "lxml (>=5.4.0,<6.0.0)",
    "numpy (>=2.2.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
