[tool.poetry]
name = "embrapa-api"
version = "0.1.0"
description = "REST API for viticulture data from Embrapa, with scraping and fallback support."
authors = ["Camila Coelho <piva.camila@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
pydantic-settings = "^2.9.1"
lxml = "^5.4.0"
numpy = "^2.2.6"
python-multipart = "^0.0.20"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.4"
pandas = "^2.2.3"
python-dotenv = "^1.1.0"
python-jose = "^3.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
